tdf#100756 slowdown in manipulating spreadsheet via UNO

regression from
    commit 5bce32904091ffe28884fd5c0f4801ee82bad101
    SfxHint: convert home-grown RTTI to normal C++ RTTI

the cost does seem in this case to be mostly the dynamic_cast, but since
we don't need it anymore, just remove it

Change-Id: Icbf51b89c036b86cfb3e4c2a827228ccf25bb3a6
Reviewed-on: https://gerrit.libreoffice.org/54899
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 06f86d544c8017c2e736bc77db27dd623853770b)